button click effect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_account">Аккаунт</string>
     <string name="favourite">Моё</string>
     <string name="harmonica">Harmonica</string>
+    <string name="move_to_cart">В корзину</string>
 </resources>
