--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,15 @@
 <resources>
-    <string name="app_name">Harmonica Tula Shop</string>
+    <string name="app_name">Магазин Тульских Гармоней</string>
     <string name="title_home">Главная</string>
     <string name="title_catalog">Каталог</string>
     <string name="title_cart">Корзина</string>
     <string name="title_account">Аккаунт</string>
     <string name="favourite">Моё</string>
-    <string name="harmonica">Harmonica</string>
     <string name="move_to_cart">В корзину</string>
     <string name="sign_in">Войти</string>
     <string name="sign_up">Зарегистрироваться</string>
-    <string name="title_activity_sign_in">SignInActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="bayans">Bayans</string>
+    <string name="bayan_catalog">Bayans</string>
     <string name="title_bayans">Баяны</string>
+    <string name="harmonica_catalog">Каталог гармоней</string>
+    <string name="title_harmonica">Гармони</string>
 </resources>
