--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Магазин Тульских Гармоней</string>
+    <string name="app_name">Тульские Гармошки</string>
     <string name="title_home">Главная</string>
     <string name="title_catalog">Каталог</string>
     <string name="title_cart">Корзина</string>
