--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,25 @@
 <resources>
     <string name="app_name">Тульские Гармошки</string>
+
     <string name="title_home">Главная</string>
     <string name="title_catalog">Каталог</string>
-    <string name="title_cart">Корзина</string>
     <string name="title_account">Аккаунт</string>
     <string name="favourite">Моё</string>
-    <string name="move_to_cart">В корзину</string>
+    <string name="title_cart">Корзина</string>
+
     <string name="sign_in">Войти</string>
     <string name="sign_up">Зарегистрироваться</string>
+
     <string name="harmonica_catalog">Каталог гармоней</string>
     <string name="bayan_catalog">Каталог баянов</string>
     <string name="accordion_catalog">Каталог Аккордеонов</string>
+
     <string name="title_harmonica">Гармони</string>
     <string name="title_bayan">Баяны</string>
     <string name="catalog_accordion">Аккордеоны</string>
+
+    <string name="add_to_cart">В корзину</string>
+
+    <string name="harmonica_image">Harmonica Image</string>
+    <string name="add_to_favourites">Отложить гармонь</string>
 </resources>
