--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="catalog_accordion">Аккордеоны</string>
 
     <string name="add_to_cart">В корзину</string>
+    <string name="added_to_cart">В корзине</string>
 
     <string name="harmonica_image">Harmonica Image</string>
     <string name="add_to_favourites">Отложить гармонь</string>
