--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
 
     <string name="harmonica_image">Harmonica Image</string>
     <string name="bayan_image">Bayan Image</string>
+    <string name="accordion_image">Accordion image</string>
 </resources>
